<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_18"
    android:layout_marginEnd="@dimen/dp_18"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/proceed"
        style="@style/font_30_black_semi"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:textAlignment="center"
        android:text="@string/go_to_auth"
        style="@style/font_16_gray04_medium" />

    <Button
        style="@style/font_18_white_semi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/background_button"
        android:text="@string/authorization"
        android:textAllCaps="false" />

    <Button
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_18"
        android:text="@string/forgot_pswrd"
        style="@style/font_18_primary_semi"
        android:textAllCaps="false"/>
</LinearLayout>