<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/font_30_black_semi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            style="@style/font_16_gray03_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@drawable/bg_et_gray01"
            android:hint="@string/name"
            android:padding="@dimen/dp_16"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/font_16_gray03_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@drawable/bg_et_gray01"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:padding="@dimen/dp_16"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@null"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/et_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/font_16_gray03_medium"
                android:background="@drawable/bg_et_gray01"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@null"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/et_password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/font_16_gray03_medium"
                android:background="@drawable/bg_et_gray01"
                android:hint="@string/confirm_pswrd"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@drawable/bg_et_gray01"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_password" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/ic_triangle"
            app:layout_constraintBottom_toBottomOf="@id/spinner"
            app:layout_constraintEnd_toEndOf="@id/spinner"
            app:layout_constraintTop_toTopOf="@id/spinner" />

        <EditText
            android:id="@+id/et_answer"
            style="@style/font_16_gray03_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@drawable/bg_et_gray01"
            android:hint="@string/secret_question_answr"
            android:inputType="text"
            android:padding="16dp"
            android:paddingStart="@dimen/dp_16"
            app:layout_constraintTop_toBottomOf="@id/spinner" />

        <CheckBox
            android:id="@+id/ch_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/inter_regular"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_answer" />


        <Button
            android:id="@+id/btn_register"
            style="@style/font_18_white_semi"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/background_button"
            android:letterSpacing="0.02"
            android:enabled="false"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/ch_agreement" />

        <Button
            style="@style/font_18_primary_semi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@android:color/transparent"
            android:text="@string/registered_already"

            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>