<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationActivity">

    <Button
        android:layout_width="@dimen/dp_28"
        android:layout_height="@dimen/dp_28"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/font_18_gray04_medium"
            android:text="@string/registration" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            style="@style/font_12_gray04_regular"
            android:text="@string/enter_phone_num_click_next" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_12">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_38"
                android:background="@drawable/bg_transparent_et"
                android:spinnerMode="dropdown"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dp_8"
                android:src="@drawable/ic_triangle"
                app:layout_constraintBottom_toBottomOf="@id/spinner"
                app:layout_constraintEnd_toEndOf="@id/spinner"
                app:layout_constraintTop_toTopOf="@id/spinner" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_38"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@drawable/bg_transparent_et"
            android:hint="@string/phone_num"
            android:inputType="phone"
            android:padding="@dimen/dp_12"
            android:textSize="@dimen/dp_12" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_38"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_12"
            style="@style/font_16_white_regular"
            android:background="@drawable/background_button"
            android:text="@string/next"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
